--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,7 @@
 ---
 version: 0.2
 
-env:
-  parameter-store:         
-    JWT_SECRET: dhaval
+
 
 phases:
   install:
@@ -19,6 +17,8 @@ phases:
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
+        - pip install -r requirements.txt
+        - python test_main.py
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
